--- a/source/home.less
+++ b/source/home.less
@@ -122,15 +122,12 @@
 .progress {
   position: relative;
   display: inline-block;
-  width: 250px;
+  width: 100%;
   height: 20px;
   margin: 0 15px 0 0;
   padding: 0;
   list-style: none;
   .v-align;
-  @media @small {
-    width: 200px;
-  }
 }
 
 .progress-bar {
